Fixing formatting and spacing between containers

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,9 @@ label.logo {
   line-height: 80px;
   padding: 0 100px;
   font-weight: bold;
+  cursor: pointer;
+  border-radius: 3px;
+
 }
 nav ul {
   float: right;
@@ -121,7 +124,6 @@ transform-origin: bottom left;
   }
   
   .left-half {
-    border: 1px solid green;  
 
     background: #F8F0E3;
     grid-column: 1;
@@ -206,13 +208,12 @@ transform-origin: bottom left;
   }
  
   .about_title{
-    margin-top: 10%;
+    margin-top: 13.2%;
     font-size: 4rem;
     text-align: center;
 
   }
   .about_me_left{
-    border: 1px solid green;  
     padding-right: 100px;
 
     background: #F8F0E3;
@@ -220,7 +221,6 @@ transform-origin: bottom left;
     height: 50vh;
     text-align: left;
     margin-left: 37%;
-    margin-top: 14%;
     background-color: #F8F0E3;
 
 
@@ -232,7 +232,6 @@ transform-origin: bottom left;
     height: 50vh;
     text-align: left;
     background-color: #F8F0E3;
-    margin-top:5%;
     margin-right: 15%;
   }
   .left_about,
@@ -264,7 +263,6 @@ transform-origin: bottom left;
 /*-------------------------- PROJECTS  -------------------------------*/
 /*-------------------------------------------------------------------*/
 .container3{
-  border: 1px solid green;  
 margin-left: 10%;
 margin-right: 10%;
   padding: 4px;
@@ -276,7 +274,6 @@ margin-right: 10%;
 
 }
 .card {
-  border: 1px solid green;  
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px;
@@ -355,7 +352,6 @@ margin-right: 10%;
 /*-------------------------------------------------------------------*/
 
 .container5{
-  border: 1px solid green;  
 margin-left: 10%;
 margin-right: 10%;
   padding: 4px;
@@ -365,7 +361,6 @@ margin-right: 10%;
   row-gap: 1em;
 }
 .card1 {
-  border: 1px solid green;  
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px;
@@ -385,6 +380,54 @@ img {
   font-size: 30px;
   padding: 2px 16px;
 }
+ /*--------------------------------------------------------------------*/
+/*-------------------------- FOOTER  -------------------------------*/
+/*-------------------------------------------------------------------*/
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
+  min-height: 100%;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+}
+
+.demo {
+  margin: 0 auto;
+  padding-top: 32px;
+  max-width: 640px;
+  width: 94%;
+}
+
+.demo h1 {
+  margin-top: 0;
+}
+
+/**
+ * Footer Styles
+ */
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #F8F0E3;
+  text-align: center;
+}
+
+
 
 /*--------------------------------------------------------------------*/
 /*-------------------------- MEDIA QUERY -------------------------------*/
